// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`date > 42 > anytime > with only Date refDate 1`] = `2020-11-22T03:05:49.801Z`;

exports[`date > 42 > anytime > with only number refDate 1`] = `2020-11-22T03:05:49.801Z`;

exports[`date > 42 > anytime > with only string refDate 1`] = `2020-11-22T03:05:49.801Z`;

exports[`date > 42 > between > with Date dates 1`] = `2021-03-15T19:30:57.091Z`;

exports[`date > 42 > between > with mixed dates 1`] = `2021-03-15T19:30:57.091Z`;

exports[`date > 42 > between > with string dates 1`] = `2021-03-15T19:30:57.091Z`;

exports[`date > 42 > betweens > with Date dates 1`] = `
[
  2021-03-15T19:30:57.091Z,
  2021-04-09T17:05:10.406Z,
  2021-04-18T19:23:52.973Z,
]
`;

exports[`date > 42 > betweens > with Date dates and count 1`] = `
[
  2021-03-04T12:54:15.263Z,
  2021-03-15T19:30:57.091Z,
  2021-04-05T21:40:57.315Z,
  2021-04-09T17:05:10.406Z,
  2021-04-18T19:23:52.973Z,
]
`;

exports[`date > 42 > betweens > with Date dates and count range 1`] = `
[
  2021-03-04T12:54:15.263Z,
  2021-04-05T21:40:57.315Z,
  2021-04-09T17:05:10.406Z,
  2021-04-18T19:23:52.973Z,
]
`;

exports[`date > 42 > betweens > with mixed dates 1`] = `
[
  2021-03-15T19:30:57.091Z,
  2021-04-09T17:05:10.406Z,
  2021-04-18T19:23:52.973Z,
]
`;

exports[`date > 42 > betweens > with string dates 1`] = `
[
  2021-03-15T19:30:57.091Z,
  2021-04-09T17:05:10.406Z,
  2021-04-18T19:23:52.973Z,
]
`;

exports[`date > 42 > betweens > with string dates and count 1`] = `
[
  2021-03-04T12:54:15.263Z,
  2021-03-15T19:30:57.091Z,
  2021-04-05T21:40:57.315Z,
  2021-04-09T17:05:10.406Z,
  2021-04-18T19:23:52.973Z,
]
`;

exports[`date > 42 > birthdate > with age and refDate 1`] = `1980-07-07T19:06:53.022Z`;

exports[`date > 42 > birthdate > with age mode and refDate 1`] = `1963-09-27T06:10:33.792Z`;

exports[`date > 42 > birthdate > with age range and refDate 1`] = `1962-12-27T20:13:59.702Z`;

exports[`date > 42 > birthdate > with only refDate 1`] = `1964-08-06T01:03:57.017Z`;

exports[`date > 42 > birthdate > with year and refDate 1`] = `0020-07-07T19:06:53.022Z`;

exports[`date > 42 > birthdate > with year mode and refDate 1`] = `1964-08-06T01:03:57.017Z`;

exports[`date > 42 > birthdate > with year range and refDate 1`] = `0057-12-20T11:59:23.890Z`;

exports[`date > 42 > future > with only Date refDate 1`] = `2021-07-08T10:07:33.381Z`;

exports[`date > 42 > future > with only number refDate 1`] = `2021-07-08T10:07:33.381Z`;

exports[`date > 42 > future > with only string refDate 1`] = `2021-07-08T10:07:33.381Z`;

exports[`date > 42 > future > with value 1`] = `2024-11-19T18:52:06.785Z`;

exports[`date > 42 > month > noArgs 1`] = `"May"`;

exports[`date > 42 > month > with abbreviated = true 1`] = `"May"`;

exports[`date > 42 > month > with abbreviated = true and context = true 1`] = `"May"`;

exports[`date > 42 > month > with context = true 1`] = `"May"`;

exports[`date > 42 > past > with only Date refDate 1`] = `2020-10-08T00:10:58.041Z`;

exports[`date > 42 > past > with only number refDate 1`] = `2020-10-08T00:10:58.041Z`;

exports[`date > 42 > past > with only string refDate 1`] = `2020-10-08T00:10:58.041Z`;

exports[`date > 42 > past > with value 1`] = `2017-05-26T15:26:24.637Z`;

exports[`date > 42 > recent > with only Date refDate 1`] = `2021-02-21T08:09:54.820Z`;

exports[`date > 42 > recent > with only number refDate 1`] = `2021-02-21T08:09:54.820Z`;

exports[`date > 42 > recent > with only string refDate 1`] = `2021-02-21T08:09:54.820Z`;

exports[`date > 42 > recent > with value 1`] = `2021-02-17T23:15:52.427Z`;

exports[`date > 42 > soon > with only Date refDate 1`] = `2021-02-22T02:08:36.602Z`;

exports[`date > 42 > soon > with only number refDate 1`] = `2021-02-22T02:08:36.602Z`;

exports[`date > 42 > soon > with only string refDate 1`] = `2021-02-22T02:08:36.602Z`;

exports[`date > 42 > soon > with value 1`] = `2021-02-25T11:02:38.995Z`;

exports[`date > 42 > weekday > noArgs 1`] = `"Tuesday"`;

exports[`date > 42 > weekday > with abbreviated = true 1`] = `"Tue"`;

exports[`date > 42 > weekday > with abbreviated = true and context = true 1`] = `"Tue"`;

exports[`date > 42 > weekday > with context = true 1`] = `"Tuesday"`;

exports[`date > 1211 > anytime > with only Date refDate 1`] = `2021-12-31T12:49:38.848Z`;

exports[`date > 1211 > anytime > with only number refDate 1`] = `2021-12-31T12:49:38.848Z`;

exports[`date > 1211 > anytime > with only string refDate 1`] = `2021-12-31T12:49:38.848Z`;

exports[`date > 1211 > between > with Date dates 1`] = `2021-04-17T11:58:13.327Z`;

exports[`date > 1211 > between > with mixed dates 1`] = `2021-04-17T11:58:13.327Z`;

exports[`date > 1211 > between > with string dates 1`] = `2021-04-17T11:58:13.327Z`;

exports[`date > 1211 > betweens > with Date dates 1`] = `
[
  2021-03-20T19:08:07.621Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
]
`;

exports[`date > 1211 > betweens > with Date dates and count 1`] = `
[
  2021-03-07T00:34:12.770Z,
  2021-03-20T19:08:07.621Z,
  2021-04-08T15:12:37.581Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
]
`;

exports[`date > 1211 > betweens > with Date dates and count range 1`] = `
[
  2021-03-01T09:04:55.612Z,
  2021-03-07T00:34:12.770Z,
  2021-03-20T19:08:07.621Z,
  2021-04-08T15:12:37.581Z,
  2021-04-15T10:20:25.794Z,
]
`;

exports[`date > 1211 > betweens > with mixed dates 1`] = `
[
  2021-03-20T19:08:07.621Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
]
`;

exports[`date > 1211 > betweens > with string dates 1`] = `
[
  2021-03-20T19:08:07.621Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
]
`;

exports[`date > 1211 > betweens > with string dates and count 1`] = `
[
  2021-03-07T00:34:12.770Z,
  2021-03-20T19:08:07.621Z,
  2021-04-08T15:12:37.581Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
]
`;

exports[`date > 1211 > birthdate > with age and refDate 1`] = `1981-01-26T13:16:31.421Z`;

exports[`date > 1211 > birthdate > with age mode and refDate 1`] = `1998-08-21T21:24:30.782Z`;

exports[`date > 1211 > birthdate > with age range and refDate 1`] = `1996-10-13T01:44:07.645Z`;

exports[`date > 1211 > birthdate > with only refDate 1`] = `1999-06-29T11:06:58.506Z`;

exports[`date > 1211 > birthdate > with year and refDate 1`] = `0021-01-26T13:16:31.421Z`;

exports[`date > 1211 > birthdate > with year mode and refDate 1`] = `1999-06-29T11:06:58.506Z`;

exports[`date > 1211 > birthdate > with year range and refDate 1`] = `0113-12-03T19:45:27.654Z`;

exports[`date > 1211 > future > with only Date refDate 1`] = `2022-01-26T14:59:27.351Z`;

exports[`date > 1211 > future > with only number refDate 1`] = `2022-01-26T14:59:27.351Z`;

exports[`date > 1211 > future > with only string refDate 1`] = `2022-01-26T14:59:27.351Z`;

exports[`date > 1211 > future > with value 1`] = `2030-06-03T19:31:11.467Z`;

exports[`date > 1211 > month > noArgs 1`] = `"December"`;

exports[`date > 1211 > month > with abbreviated = true 1`] = `"Dec"`;

exports[`date > 1211 > month > with abbreviated = true and context = true 1`] = `"Dec"`;

exports[`date > 1211 > month > with context = true 1`] = `"December"`;

exports[`date > 1211 > past > with only Date refDate 1`] = `2020-03-19T19:19:04.071Z`;

exports[`date > 1211 > past > with only number refDate 1`] = `2020-03-19T19:19:04.071Z`;

exports[`date > 1211 > past > with only string refDate 1`] = `2020-03-19T19:19:04.071Z`;

exports[`date > 1211 > past > with value 1`] = `2011-11-12T14:47:19.955Z`;

exports[`date > 1211 > recent > with only Date refDate 1`] = `2021-02-20T18:52:11.498Z`;

exports[`date > 1211 > recent > with only number refDate 1`] = `2021-02-20T18:52:11.498Z`;

exports[`date > 1211 > recent > with only string refDate 1`] = `2021-02-20T18:52:11.498Z`;

exports[`date > 1211 > recent > with value 1`] = `2021-02-12T10:18:34.226Z`;

exports[`date > 1211 > soon > with only Date refDate 1`] = `2021-02-22T15:26:19.924Z`;

exports[`date > 1211 > soon > with only number refDate 1`] = `2021-02-22T15:26:19.924Z`;

exports[`date > 1211 > soon > with only string refDate 1`] = `2021-02-22T15:26:19.924Z`;

exports[`date > 1211 > soon > with value 1`] = `2021-03-02T23:59:57.196Z`;

exports[`date > 1211 > weekday > noArgs 1`] = `"Saturday"`;

exports[`date > 1211 > weekday > with abbreviated = true 1`] = `"Sat"`;

exports[`date > 1211 > weekday > with abbreviated = true and context = true 1`] = `"Sat"`;

exports[`date > 1211 > weekday > with context = true 1`] = `"Saturday"`;

exports[`date > 1337 > anytime > with only Date refDate 1`] = `2020-08-31T23:49:36.088Z`;

exports[`date > 1337 > anytime > with only number refDate 1`] = `2020-08-31T23:49:36.088Z`;

exports[`date > 1337 > anytime > with only string refDate 1`] = `2020-08-31T23:49:36.088Z`;

exports[`date > 1337 > between > with Date dates 1`] = `2021-03-09T04:11:24.667Z`;

exports[`date > 1337 > between > with mixed dates 1`] = `2021-03-09T04:11:24.667Z`;

exports[`date > 1337 > between > with string dates 1`] = `2021-03-09T04:11:24.667Z`;

exports[`date > 1337 > betweens > with Date dates 1`] = `
[
  2021-03-03T01:51:22.512Z,
  2021-03-09T04:11:24.667Z,
  2021-03-26T18:53:00.564Z,
]
`;

exports[`date > 1337 > betweens > with Date dates and count 1`] = `
[
  2021-03-03T01:51:22.512Z,
  2021-03-06T06:11:08.446Z,
  2021-03-09T04:11:24.667Z,
  2021-03-10T02:59:27.376Z,
  2021-03-26T18:53:00.564Z,
]
`;

exports[`date > 1337 > betweens > with Date dates and count range 1`] = `
[
  2021-03-03T01:51:22.512Z,
  2021-03-06T06:11:08.446Z,
  2021-03-26T18:53:00.564Z,
]
`;

exports[`date > 1337 > betweens > with mixed dates 1`] = `
[
  2021-03-03T01:51:22.512Z,
  2021-03-09T04:11:24.667Z,
  2021-03-26T18:53:00.564Z,
]
`;

exports[`date > 1337 > betweens > with string dates 1`] = `
[
  2021-03-03T01:51:22.512Z,
  2021-03-09T04:11:24.667Z,
  2021-03-26T18:53:00.564Z,
]
`;

exports[`date > 1337 > betweens > with string dates and count 1`] = `
[
  2021-03-03T01:51:22.512Z,
  2021-03-06T06:11:08.446Z,
  2021-03-09T04:11:24.667Z,
  2021-03-10T02:59:27.376Z,
  2021-03-26T18:53:00.564Z,
]
`;

exports[`date > 1337 > birthdate > with age and refDate 1`] = `1980-05-27T14:46:44.831Z`;

exports[`date > 1337 > birthdate > with age mode and refDate 1`] = `1956-08-25T03:57:00.497Z`;

exports[`date > 1337 > birthdate > with age range and refDate 1`] = `1956-02-15T21:16:40.120Z`;

exports[`date > 1337 > birthdate > with only refDate 1`] = `1957-07-05T09:38:29.057Z`;

exports[`date > 1337 > birthdate > with year and refDate 1`] = `0020-05-27T14:46:44.831Z`;

exports[`date > 1337 > birthdate > with year mode and refDate 1`] = `1957-07-05T09:38:29.057Z`;

exports[`date > 1337 > birthdate > with year range and refDate 1`] = `0046-08-09T19:19:18.047Z`;

exports[`date > 1337 > future > with only Date refDate 1`] = `2021-05-28T08:29:26.637Z`;

exports[`date > 1337 > future > with only number refDate 1`] = `2021-05-28T08:29:26.637Z`;

exports[`date > 1337 > future > with only string refDate 1`] = `2021-05-28T08:29:26.637Z`;

exports[`date > 1337 > future > with value 1`] = `2023-10-06T02:30:58.333Z`;

exports[`date > 1337 > month > noArgs 1`] = `"April"`;

exports[`date > 1337 > month > with abbreviated = true 1`] = `"Apr"`;

exports[`date > 1337 > month > with abbreviated = true and context = true 1`] = `"Apr"`;

exports[`date > 1337 > month > with context = true 1`] = `"April"`;

exports[`date > 1337 > past > with only Date refDate 1`] = `2020-11-18T01:49:04.785Z`;

exports[`date > 1337 > past > with only number refDate 1`] = `2020-11-18T01:49:04.785Z`;

exports[`date > 1337 > past > with only string refDate 1`] = `2020-11-18T01:49:04.785Z`;

exports[`date > 1337 > past > with value 1`] = `2018-07-11T07:47:33.089Z`;

exports[`date > 1337 > recent > with only Date refDate 1`] = `2021-02-21T10:51:56.041Z`;

exports[`date > 1337 > recent > with only number refDate 1`] = `2021-02-21T10:51:56.041Z`;

exports[`date > 1337 > recent > with only string refDate 1`] = `2021-02-21T10:51:56.041Z`;

exports[`date > 1337 > recent > with value 1`] = `2021-02-19T02:16:05.653Z`;

exports[`date > 1337 > soon > with only Date refDate 1`] = `2021-02-21T23:26:35.381Z`;

exports[`date > 1337 > soon > with only number refDate 1`] = `2021-02-21T23:26:35.381Z`;

exports[`date > 1337 > soon > with only string refDate 1`] = `2021-02-21T23:26:35.381Z`;

exports[`date > 1337 > soon > with value 1`] = `2021-02-24T08:02:25.769Z`;

exports[`date > 1337 > weekday > noArgs 1`] = `"Monday"`;

exports[`date > 1337 > weekday > with abbreviated = true 1`] = `"Mon"`;

exports[`date > 1337 > weekday > with abbreviated = true and context = true 1`] = `"Mon"`;

exports[`date > 1337 > weekday > with context = true 1`] = `"Monday"`;

exports[`date > deprecated > 42 > between > with Date dates 1`] = `2021-03-15T19:30:57.091Z`;

exports[`date > deprecated > 42 > between > with string dates 1`] = `2021-03-15T19:30:57.091Z`;

exports[`date > deprecated > 42 > betweens > with Date dates 1`] = `
[
  2021-03-15T19:30:57.091Z,
  2021-04-09T17:05:10.406Z,
  2021-04-18T19:23:52.973Z,
]
`;

exports[`date > deprecated > 42 > betweens > with Date dates and count 1`] = `
[
  2021-03-04T12:54:15.263Z,
  2021-03-15T19:30:57.091Z,
  2021-04-05T21:40:57.315Z,
  2021-04-09T17:05:10.406Z,
  2021-04-18T19:23:52.973Z,
]
`;

exports[`date > deprecated > 42 > betweens > with string dates 1`] = `
[
  2021-03-15T19:30:57.091Z,
  2021-04-09T17:05:10.406Z,
  2021-04-18T19:23:52.973Z,
]
`;

exports[`date > deprecated > 42 > betweens > with string dates and count 1`] = `
[
  2021-03-04T12:54:15.263Z,
  2021-03-15T19:30:57.091Z,
  2021-04-05T21:40:57.315Z,
  2021-04-09T17:05:10.406Z,
  2021-04-18T19:23:52.973Z,
]
`;

exports[`date > deprecated > 42 > future > with only Date refDate 1`] = `2021-07-08T10:07:33.381Z`;

exports[`date > deprecated > 42 > future > with only number refDate 1`] = `2021-07-08T10:07:33.381Z`;

exports[`date > deprecated > 42 > future > with only string refDate 1`] = `2021-07-08T10:07:33.381Z`;

exports[`date > deprecated > 42 > future > with value 1`] = `2024-11-19T18:52:06.785Z`;

exports[`date > deprecated > 42 > past > with only Date refDate 1`] = `2020-10-08T00:10:58.041Z`;

exports[`date > deprecated > 42 > past > with only number refDate 1`] = `2020-10-08T00:10:58.041Z`;

exports[`date > deprecated > 42 > past > with only string refDate 1`] = `2020-10-08T00:10:58.041Z`;

exports[`date > deprecated > 42 > past > with value 1`] = `2017-05-26T15:26:24.637Z`;

exports[`date > deprecated > 42 > recent > with only Date refDate 1`] = `2021-02-21T08:09:54.820Z`;

exports[`date > deprecated > 42 > recent > with only number refDate 1`] = `2021-02-21T08:09:54.820Z`;

exports[`date > deprecated > 42 > recent > with only string refDate 1`] = `2021-02-21T08:09:54.820Z`;

exports[`date > deprecated > 42 > recent > with value 1`] = `2021-02-17T23:15:52.427Z`;

exports[`date > deprecated > 42 > soon > with only Date refDate 1`] = `2021-02-22T02:08:36.602Z`;

exports[`date > deprecated > 42 > soon > with only number refDate 1`] = `2021-02-22T02:08:36.602Z`;

exports[`date > deprecated > 42 > soon > with only string refDate 1`] = `2021-02-22T02:08:36.602Z`;

exports[`date > deprecated > 42 > soon > with value 1`] = `2021-02-25T11:02:38.995Z`;

exports[`date > deprecated > 1211 > between > with Date dates 1`] = `2021-04-17T11:58:13.327Z`;

exports[`date > deprecated > 1211 > between > with string dates 1`] = `2021-04-17T11:58:13.327Z`;

exports[`date > deprecated > 1211 > betweens > with Date dates 1`] = `
[
  2021-03-20T19:08:07.621Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
]
`;

exports[`date > deprecated > 1211 > betweens > with Date dates and count 1`] = `
[
  2021-03-07T00:34:12.770Z,
  2021-03-20T19:08:07.621Z,
  2021-04-08T15:12:37.581Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
]
`;

exports[`date > deprecated > 1211 > betweens > with string dates 1`] = `
[
  2021-03-20T19:08:07.621Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
]
`;

exports[`date > deprecated > 1211 > betweens > with string dates and count 1`] = `
[
  2021-03-07T00:34:12.770Z,
  2021-03-20T19:08:07.621Z,
  2021-04-08T15:12:37.581Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
]
`;

exports[`date > deprecated > 1211 > future > with only Date refDate 1`] = `2022-01-26T14:59:27.351Z`;

exports[`date > deprecated > 1211 > future > with only number refDate 1`] = `2022-01-26T14:59:27.351Z`;

exports[`date > deprecated > 1211 > future > with only string refDate 1`] = `2022-01-26T14:59:27.351Z`;

exports[`date > deprecated > 1211 > future > with value 1`] = `2030-06-03T19:31:11.467Z`;

exports[`date > deprecated > 1211 > past > with only Date refDate 1`] = `2020-03-19T19:19:04.071Z`;

exports[`date > deprecated > 1211 > past > with only number refDate 1`] = `2020-03-19T19:19:04.071Z`;

exports[`date > deprecated > 1211 > past > with only string refDate 1`] = `2020-03-19T19:19:04.071Z`;

exports[`date > deprecated > 1211 > past > with value 1`] = `2011-11-12T14:47:19.955Z`;

exports[`date > deprecated > 1211 > recent > with only Date refDate 1`] = `2021-02-20T18:52:11.498Z`;

exports[`date > deprecated > 1211 > recent > with only number refDate 1`] = `2021-02-20T18:52:11.498Z`;

exports[`date > deprecated > 1211 > recent > with only string refDate 1`] = `2021-02-20T18:52:11.498Z`;

exports[`date > deprecated > 1211 > recent > with value 1`] = `2021-02-12T10:18:34.226Z`;

exports[`date > deprecated > 1211 > soon > with only Date refDate 1`] = `2021-02-22T15:26:19.924Z`;

exports[`date > deprecated > 1211 > soon > with only number refDate 1`] = `2021-02-22T15:26:19.924Z`;

exports[`date > deprecated > 1211 > soon > with only string refDate 1`] = `2021-02-22T15:26:19.924Z`;

exports[`date > deprecated > 1211 > soon > with value 1`] = `2021-03-02T23:59:57.196Z`;

exports[`date > deprecated > 1337 > between > with Date dates 1`] = `2021-03-09T04:11:24.667Z`;

exports[`date > deprecated > 1337 > between > with string dates 1`] = `2021-03-09T04:11:24.667Z`;

exports[`date > deprecated > 1337 > betweens > with Date dates 1`] = `
[
  2021-03-03T01:51:22.512Z,
  2021-03-09T04:11:24.667Z,
  2021-03-26T18:53:00.564Z,
]
`;

exports[`date > deprecated > 1337 > betweens > with Date dates and count 1`] = `
[
  2021-03-03T01:51:22.512Z,
  2021-03-06T06:11:08.446Z,
  2021-03-09T04:11:24.667Z,
  2021-03-10T02:59:27.376Z,
  2021-03-26T18:53:00.564Z,
]
`;

exports[`date > deprecated > 1337 > betweens > with string dates 1`] = `
[
  2021-03-03T01:51:22.512Z,
  2021-03-09T04:11:24.667Z,
  2021-03-26T18:53:00.564Z,
]
`;

exports[`date > deprecated > 1337 > betweens > with string dates and count 1`] = `
[
  2021-03-03T01:51:22.512Z,
  2021-03-06T06:11:08.446Z,
  2021-03-09T04:11:24.667Z,
  2021-03-10T02:59:27.376Z,
  2021-03-26T18:53:00.564Z,
]
`;

exports[`date > deprecated > 1337 > future > with only Date refDate 1`] = `2021-05-28T08:29:26.637Z`;

exports[`date > deprecated > 1337 > future > with only number refDate 1`] = `2021-05-28T08:29:26.637Z`;

exports[`date > deprecated > 1337 > future > with only string refDate 1`] = `2021-05-28T08:29:26.637Z`;

exports[`date > deprecated > 1337 > future > with value 1`] = `2023-10-06T02:30:58.333Z`;

exports[`date > deprecated > 1337 > past > with only Date refDate 1`] = `2020-11-18T01:49:04.785Z`;

exports[`date > deprecated > 1337 > past > with only number refDate 1`] = `2020-11-18T01:49:04.785Z`;

exports[`date > deprecated > 1337 > past > with only string refDate 1`] = `2020-11-18T01:49:04.785Z`;

exports[`date > deprecated > 1337 > past > with value 1`] = `2018-07-11T07:47:33.089Z`;

exports[`date > deprecated > 1337 > recent > with only Date refDate 1`] = `2021-02-21T10:51:56.041Z`;

exports[`date > deprecated > 1337 > recent > with only number refDate 1`] = `2021-02-21T10:51:56.041Z`;

exports[`date > deprecated > 1337 > recent > with only string refDate 1`] = `2021-02-21T10:51:56.041Z`;

exports[`date > deprecated > 1337 > recent > with value 1`] = `2021-02-19T02:16:05.653Z`;

exports[`date > deprecated > 1337 > soon > with only Date refDate 1`] = `2021-02-21T23:26:35.381Z`;

exports[`date > deprecated > 1337 > soon > with only number refDate 1`] = `2021-02-21T23:26:35.381Z`;

exports[`date > deprecated > 1337 > soon > with only string refDate 1`] = `2021-02-21T23:26:35.381Z`;

exports[`date > deprecated > 1337 > soon > with value 1`] = `2021-02-24T08:02:25.769Z`;
